@@ -703,6 +703,8 @@
 		0427F7EA0898352F0022C4EC /* ApplicationServices.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 045BB44806258FE500A75828 /* ApplicationServices.framework */; };
 		0427F7EB0898352F0022C4EC /* libltdl.a in Frameworks */ = {isa = PBXBuildFile; fileRef = 04B9F6120700518600B78CC4 /* libltdl.a */; };
 		0427F7EC0898352F0022C4EC /* libxerces-c.dylib in Frameworks */ = {isa = PBXBuildFile; fileRef = 0480D5E907208FB600D39BB5 /* libxerces-c.dylib */; };
+		042862490ACAA7FA00640C74 /* QTKit.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 042862480ACAA7FA00640C74 /* QTKit.framework */; };
+		0428624A0ACAA7FA00640C74 /* QTKit.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 042862480ACAA7FA00640C74 /* QTKit.framework */; };
 		042AF901053C2F020010C447 /* region.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 042AF8FA053C2F020010C447 /* region.cpp */; };
 		042D9BD8061D8A40002F255F /* none_factory.h in Headers */ = {isa = PBXBuildFile; fileRef = 042D9BD5061D8A40002F255F /* none_factory.h */; };
 		042D9BDA061D8A40002F255F /* none_video_renderer.h in Headers */ = {isa = PBXBuildFile; fileRef = 042D9BD7061D8A40002F255F /* none_video_renderer.h */; };
@@ -1816,6 +1818,7 @@
 		0427B21F0625FCF20071CD58 /* libavcodec.a */ = {isa = PBXFileReference; lastKnownFileType = archive.ar; name = libavcodec.a; path = "../../third_party_packages/ffmpeg-0.4.8/libavcodec/libavcodec.a"; sourceTree = SOURCE_ROOT; };
 		0427B2210625FD160071CD58 /* libavformat.a */ = {isa = PBXFileReference; lastKnownFileType = archive.ar; name = libavformat.a; path = "../../third_party_packages/ffmpeg-0.4.8/libavformat/libavformat.a"; sourceTree = SOURCE_ROOT; };
 		0427F7F30898352F0022C4EC /* cocoambulant.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = cocoambulant.app; sourceTree = BUILT_PRODUCTS_DIR; };
+		042862480ACAA7FA00640C74 /* QTKit.framework */ = {isa = PBXFileReference; lastKnownFileType = wrapper.framework; name = QTKit.framework; path = /System/Library/Frameworks/QTKit.framework; sourceTree = "<absolute>"; };
 		042AF8FA053C2F020010C447 /* region.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; path = region.cpp; sourceTree = "<group>"; };
 		042D9BD5061D8A40002F255F /* none_factory.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; path = none_factory.h; sourceTree = "<group>"; };
 		042D9BD7061D8A40002F255F /* none_video_renderer.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; path = none_video_renderer.h; sourceTree = "<group>"; };
@@ -2128,6 +2131,7 @@
 				0452B4480AB567C1001566DE /* libavcodec.a in Frameworks */,
 				0452B44A0AB567D5001566DE /* libavformat.a in Frameworks */,
 				0452B44C0AB567DE001566DE /* libavutil.a in Frameworks */,
+				042862490ACAA7FA00640C74 /* QTKit.framework in Frameworks */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -2224,6 +2228,7 @@
 				04D336130992B50200BAEEA7 /* libavutil.a in Frameworks */,
 				04D336140992B50200BAEEA7 /* WebKit.framework in Frameworks */,
 				04D336190992B50200BAEEA7 /* AudioUnit.framework in Frameworks */,
+				0428624A0ACAA7FA00640C74 /* QTKit.framework in Frameworks */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -2794,6 +2799,7 @@
 		2A37F4C3FDCFA73011CA2CEA /* Frameworks */ = {
 			isa = PBXGroup;
 			children = (
+				042862480ACAA7FA00640C74 /* QTKit.framework */,
 				0427B2210625FD160071CD58 /* libavformat.a */,
 				0493211408951A8A00F38A0A /* libavformat.a */,
 				0459E7FD08DACE2600BF6ED5 /* libavformat.a */,
